examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__with_statements@with e as f g as h  i.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            WithStatement(
                WithStatement {
                    body: Block {
                        alternative: [],
                        children: [
                            SimpleStatement(
                                ExpressionStatement(
                                    ExpressionStatement {
                                        children: [
                                            Expression(
                                                PrimaryExpression(
                                                    Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    children: WithClause {
                        children: [
                            WithItem {
                                value: AsPattern(
                                    AsPattern {
                                        alias: Some(
                                            AsPatternTarget {
                                                [RANGE]
                                            },
                                        ),
                                        children: [
                                            Identifier(
                                                Identifier {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                [RANGE]
                            },
                            WithItem {
                                value: AsPattern(
                                    AsPattern {
                                        alias: Some(
                                            AsPatternTarget {
                                                [RANGE]
                                            },
                                        ),
                                        children: [
                                            Identifier(
                                                Identifier {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                [RANGE]
                            },
                        ],
                        [RANGE]
                    },
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
