examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__with_statements@with opend as d      opene as e  f.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            WithStatement(
                WithStatement {
                    body: Block {
                        alternative: [],
                        children: [
                            SimpleStatement(
                                ExpressionStatement(
                                    ExpressionStatement {
                                        children: [
                                            Expression(
                                                PrimaryExpression(
                                                    Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    children: WithClause {
                        children: [
                            WithItem {
                                value: AsPattern(
                                    AsPattern {
                                        alias: Some(
                                            AsPatternTarget {
                                                [RANGE]
                                            },
                                        ),
                                        children: [
                                            Expression(
                                                PrimaryExpression(
                                                    Call(
                                                        Call {
                                                            function: Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                },
                                                            ),
                                                            arguments: ArgumentList(
                                                                ArgumentList {
                                                                    children: [
                                                                        Expression(
                                                                            PrimaryExpression(
                                                                                String(
                                                                                    String {
                                                                                        children: [
                                                                                            StringStart(
                                                                                                StringStart {
                                                                                                    [RANGE]
                                                                                                },
                                                                                            ),
                                                                                            StringContent(
                                                                                                StringContent {
                                                                                                    children: [],
                                                                                                    [RANGE]
                                                                                                },
                                                                                            ),
                                                                                            StringEnd(
                                                                                                StringEnd {
                                                                                                    [RANGE]
                                                                                                },
                                                                                            ),
                                                                                        ],
                                                                                        [RANGE]
                                                                                    },
                                                                                ),
                                                                            ),
                                                                        ),
                                                                    ],
                                                                    [RANGE]
                                                                },
                                                            ),
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                [RANGE]
                            },
                            WithItem {
                                value: AsPattern(
                                    AsPattern {
                                        alias: Some(
                                            AsPatternTarget {
                                                [RANGE]
                                            },
                                        ),
                                        children: [
                                            Expression(
                                                PrimaryExpression(
                                                    Call(
                                                        Call {
                                                            function: Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                },
                                                            ),
                                                            arguments: ArgumentList(
                                                                ArgumentList {
                                                                    children: [
                                                                        Expression(
                                                                            PrimaryExpression(
                                                                                String(
                                                                                    String {
                                                                                        children: [
                                                                                            StringStart(
                                                                                                StringStart {
                                                                                                    [RANGE]
                                                                                                },
                                                                                            ),
                                                                                            StringContent(
                                                                                                StringContent {
                                                                                                    children: [],
                                                                                                    [RANGE]
                                                                                                },
                                                                                            ),
                                                                                            StringEnd(
                                                                                                StringEnd {
                                                                                                    [RANGE]
                                                                                                },
                                                                                            ),
                                                                                        ],
                                                                                        [RANGE]
                                                                                    },
                                                                                ),
                                                                            ),
                                                                        ),
                                                                    ],
                                                                    [RANGE]
                                                                },
                                                            ),
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                                [RANGE]
                            },
                        ],
                        [RANGE]
                    },
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
